--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   ],
   "dependencies": {
     "chalk": "^2.1.0",
+    "fs-extra": "^4.0.2",
     "inquirer": "^3.3.0",
     "meow": "^3.7.0",
     "save-local": "^0.0.1",
     "shout-error": "^0.0.2",
     "shout-success": "^0.0.2",
+    "spacetime": "^1.3.3",
     "speechkit-js": "^0.0.1",
     "speechkit-state": "^0.0.2",
     "update-notifier": "^2.2.0"
@@ -38,11 +40,13 @@
     "xo": "^0.18.2"
   },
   "xo": {
-    "extends": [
-      "prettier"
-    ],
+    "extends": ["prettier"],
     "rules": {
-      "no-case-declarations": 0
+      "no-case-declarations": 0,
+      "no-useless-escape": 0,
+      "no-useless-escape": 0,
+      "camelcase": 0,
+      "new-cap": 0
     }
   }
 }
